--- a/index.html
+++ b/index.html
@@ -166,11 +166,16 @@
             <div class="box-body">
               <h3>PADD</h3>
               <p>
-                The communicator appeared in episode 1 and continued until the end of TOS without change. Communicators use subspace transmissions that do not conform to normal rules of physics in that signals can bypass EM interference, and the devices allow nearly
-                instantaneous communication at distances that would otherwise require more time to traverse.
-              </p>
+                Starting out as the electronic clipboard in TOS, it was actually based on the RAND tablet in 1963.
+                Both had a stylus and simulated writing on a digital pad. Kirk used it for note-taking and official sign-offs.
+                It wasn’t until TNG in 1987 that it became the PADD (Personal Access Display Device) and worked the ship’s entire OS,
+                called LCARS (Library Computer Access & Retreival System) interface. The PADD was designed, like so many things on Star Trek,
+                due to a low budget. Because they couldn’t do anything too fancy, they made it all about the software, and Roddenberry’s vision of a simpler future was realized.
               <p>
-                Dr. Martin Cooper, inventor of the first handheld mobile phone, credits the TOS communicator as being his inspiration for the technology behind the StarTAC flip phone. Fortunately it can’t be set to self destruct.
+                The tablet PC came about in waves, the closest and earliest version being the Cyrix WebPAD in 1998, 
+                but this still required a pen or stylus making it something in between the electronic clipboard and the PADD.
+                It was in 2000 that Microsoft made the first prototype tablet PC and they hit the shelves in 2002.
+                Interestingly (and perhaps not coincidentally), the PADD is resembled most by the iPad, which dominated from 2010 on and has all the touch capabilities the PADD promised.
               </p>
               <h3>TABLET PC</h3>
             </div>
