adjustments to subheader

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 called LCARS (Library Computer Access & Retreival System) interface. The PADD was designed, like so many things on Star Trek,
                 due to a low budget. Because they couldn’t do anything too fancy, they made it all about the software, and Roddenberry’s vision of a simpler future was realized.
               <p>
-                The tablet PC came about in waves, the closest and earliest version being the Cyrix WebPAD in 1998, 
+                The tablet PC came about in waves, the closest and earliest version being the Cyrix WebPAD in 1998,
                 but this still required a pen or stylus making it something in between the electronic clipboard and the PADD.
                 It was in 2000 that Microsoft made the first prototype tablet PC and they hit the shelves in 2002.
                 Interestingly (and perhaps not coincidentally), the PADD is resembled most by the iPad, which dominated from 2010 on and has all the touch capabilities the PADD promised.
@@ -249,7 +249,8 @@
                 Fast forward to 1983, Chuck Hull invented the first 3D printer, actually capable of printing a real part.
                 In 2009 this industry really started to take off, 3D printers selling commercially worldwide and in 2013 there was significant growth.
                 They were considered to be the harbingers of the 3rd or 4th Industrial Revolution, and signs of replicating began to bloom.
-                Companies like Makerbot seem to have significant growth and sells quite a few models, printing a large amount of materials, and in 2014 Nestle was reported to be creating a prototype akin to the ol’ food synthesizor of TOS,
+                Companies like Makerbot seem to have significant growth and sells quite a few models, printing a large amount of materials,
+                and in 2014 Nestle was reported to be creating a prototype akin to the ol’ food synthesizor of TOS,
                 with the cababilty of producing tailored foods for personal nutritional requirements, Willy Wonka style.
               </p>
               <h3>3D REPLICATOR</h3>
