--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               (VOY), but the real-world versions of this tech mostly drew inspriration from these TV shows. It hadn’t always been ivented on TOS per say, but the popularization was often enough to wet the appettites of budding scientists, inventors and dreamers.
             </p>
             <p>
-              A trip through space is also a jaunt through the timeline of the real world tech available today. Even if TOS hadn’t necessarily invented the ideas of the future, it had a big hand in predicting and designing it. Gene Roddenbery, as with many other science
+              A trip through space is also a jaunt through the timeline of the real world tech available today. Even if TOS hadn’t necessarily invented the ideas of the future, it had a big hand in predicting and designing it. Gene Roddenberry, as with many other science
               fiction writers, was a visionary that could see the potential of possibility, and had an understanding of what was to come.
             </p>
             <p>
