--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
             </p>
             <p>
               Looking forward, what’s next? Talk among scientists hypothesize that teleportation (or beaming) is already being explored. Warp speed may still be purely hypothetical, but augmented reality and smart operating systems with voice command are a work in
-              progress. Phasers are still a work fo fiction, although laser weapons are alegedly already being tested by the US military. Great strides are being made in robotics, so having a Data on the bridge may not be too far away. Universal translaters
-              are in effect in baby stages, and NASA has begun work on the IXS Enterprise in preparation for space exploration by the turn of the century.
+              progress. Phasers are still a work of fiction, although laser weapons are alegedly already being tested by the US military. Great strides are being made in robotics, so having a Data on the bridge may not be too far away. Universal translaters
+              are, in effect, in baby stages, and NASA has begun work on the IXS Enterprise in preparation for space exploration by the turn of the century.
             </p>
             <p>
-              Some of the predictions of Star Trek already in use, though not currently featured here, are Google Glass, sliding doors, flashdrives, biometrics, GPS, and personal computers. Perhaps these and other items could make an appearance in the next update.
+              Some of the predictions of Star Trek that are already in use, though not currently featured here, are Google Glass, sliding doors, flashdrives, biometrics, GPS, and personal computers. Perhaps these and other items could make an appearance in the next update.
             </p>
             <p class="close">
 
