--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="assets/stylesheets/style.css" media="screen" title="Style" charset="utf-8">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="assets/javascripts/treknology.js"></script>
-
+  <meta name="viewport" content="initial-scale=1">
   <body>
     <header>
       <a name="top-of-about"></a>
