typo corrections tricorder

--- a/index.html
+++ b/index.html
@@ -211,18 +211,20 @@
             <div class="box-body">
               <h3>TRICORDER</h3>
               <p>
-                The Tricorder was the standard landing party companion, usually adoned and exhibited by Spock.
-                It was used mainly as a data sensor, analyzing, and  recording. It had a small display screen (which wasn’t quite flat),
+                The Tricorder was the standard landing party companion, usually adorned and also exhibited by Spock.
+                It was used mainly as a data sensor, often analyzing and recording. It had a small display screen (which wasn’t quite flat),
                 and a lot of flashy components that were rarely used, except for the knob which was turned like a tuner during nearly every use.
-                It was big and clunky to start, but gradually became a small handheld device.
+                It was big and clunky to start, but gradually became a small handheld device by TNG.
               </p>
               <p>
-                Gene Roddenberry came up with the tricorder as  a useful device, but also what might be a fun toy for a young female.
+                Gene Roddenberry came up with the tricorder as a useful device, but also what might be a fun toy for a young female.
                 The first official version appeared in 1996 when Vital Technologies Corporation created and sold 10,000 of them.
                 They called it the ‘TR-107 Tricorder Mark 1’ and it had funtions that included EMF metering, thermometer and barometer, "Colorimeter", "Light meter", and a clock and timer.
                 Roddenberry stated in a contract that anyone who could produce the technology could use the name Tricorder, hence the name. It was in 2012 however,
                 that the Scanadu medical device started hitting the shelves, and for a reasonable price. Incentivized by a contest with a large prize pool,
-                the Scanadu is meant to diagnose patients at least a s good as actual medical doctors.
+                the Scanadu is meant to diagnose patients at least as good as actual medical doctors. Just by placing on one's temple, it can read your pulse transit time, heart rate,
+                electrical heart activity, temperature, heart rate variability and blood oxygenation. Working in tandem with an app on your phone or device, it sends the information through
+                for display and even recording. And this can all happen in seconds. Hopefully, this medical tricorder is only the first of many to come. 
               </p>
               <h3>MEDICAL TRICORDER</h3>
             </div>
