--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <html>
-
 <head>
   <script src="https://use.typekit.net/hft7wdy.js"></script>
   <script>
@@ -29,7 +28,6 @@
         </div>
         <div id="about">
           <img id="menu-in" src="assets/images/menu-in.png" alt="menu-in" />
-
           <h3>WHAT IT'S ALL ABOUT</h3>
           <div id="aboutbody">
             <p>
@@ -58,7 +56,7 @@
               are, in effect, in baby stages, and NASA has begun work on the IXS Enterprise in preparation for space exploration by the turn of the century.
             </p>
             <p>
-              Some of the predictions of Star Trek that are already in use, though not currently featured here, are Google Glass, sliding doors, flashdrives, biometrics, GPS, and personal computers. Perhaps these and other items could make an appearance in the next update.
+              Some of the predictions of Star Trek that are already in use, though not currently featured here, are Google Glass, sliding doors, flashdrives, biometrics, GPS and personal computers. Perhaps these and other items could make an appearance in the next update.
             </p>
             <p class="close">
 
@@ -72,25 +70,14 @@
       <h1 class="logo">treknology</h1>
 
       <div id="enterprise-top" class="space-object">
-        <!-- <div class="rotate"> -->
         <img src="assets/images/enterprize-top1.png" alt="top down view of enterprise">
-        <!-- </div> -->
       </div>
 
       <h3 class="toph3">
         How the technology of the sci-fi TV hit Star Trek influenced today’s reality, and what may still come to fruition
       </h3>
-      <!-- <div id="graphic">
-      <img src="assets/images/nifty_techy_graphic.png" alt="graphic" />
-    </div> -->
-      <!-- <div class="graphic-repeat">
-      </div> -->
-
       <ul>
         <li>
-          <!-- <vid-bg>
-              <iframe src="https://player.vimeo.com/video/147571989?title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>            </video>
-          </vid-bg> -->
           <div class="js-video [vimeo, widescreen]">
             <iframe src="https://player.vimeo.com/video/147571989?title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           </div>
@@ -224,7 +211,7 @@
                 that the Scanadu medical device started hitting the shelves, and for a reasonable price. Incentivized by a contest with a large prize pool,
                 the Scanadu is meant to diagnose patients at least as good as actual medical doctors. Just by placing on one's temple, it can read your pulse transit time, heart rate,
                 electrical heart activity, temperature, heart rate variability and blood oxygenation. Working in tandem with an app on your phone or device, it sends the information through
-                for display and even recording. And this can all happen in seconds. Hopefully, this medical tricorder is only the first of many to come. 
+                for display and even recording. And this can all happen in seconds. Hopefully, this medical tricorder is only the first of many to come.
               </p>
               <h3>MEDICAL TRICORDER</h3>
             </div>
@@ -261,23 +248,6 @@
           </div>
         </li>
       </ul>
-
-      <!-- <div class="motion">
-        <iframe src="assets/images/milk.mp4"
-        <!-- width="420"
-        height="315"
-        frameborder="0"
-        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
-        allowfullscreen="">
-        </iframe>
-      </div> -->
-
-      <!-- <vid-bg>
-        <video controls>
-          <source src="assets/images/milk.mp4" type="video/mp4">
-
-        </video>
-      </vid-bg> -->
       <div class="sources">
         <h4><a href="sources.html">sources</a></h4>
         <p>
@@ -285,7 +255,5 @@
         </p>
       </div>
     </div>
-
   </body>
-
 </html>
