Fix linting errors on html & css)

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
   <script src="https://use.typekit.net/hft7wdy.js"></script>
@@ -17,6 +18,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="assets/javascripts/treknology.js"></script>
   <meta name="viewport" content="initial-scale=1">
+</head>
   <body>
     <header>
       <a name="top-of-about"></a>
@@ -158,6 +160,7 @@
                 It wasn’t until TNG in 1987 that it became the PADD (Personal Access Display Device) and worked the ship’s entire OS,
                 called LCARS (Library Computer Access & Retreival System) interface. The PADD was designed, like so many things on Star Trek,
                 due to a low budget. Because they couldn’t do anything too fancy, they made it all about the software, and Roddenberry’s vision of a simpler future was realized.
+              </p>
               <p>
                 The tablet PC came about in waves, the closest and earliest version being the Cyrix WebPAD in 1998,
                 but this still required a pen or stylus making it something in between the electronic clipboard and the PADD.
